@@ -1,3 +1,8 @@
+2004-01-30  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* 48x48/mimetypes/Makefile.am: Added DESTDIR variable in
+	install-data-hook section.
+
 === gnome-icon-theme 1.1.6 ===
 	
 2004-01-30  Alexander Larsson  <alexl@redhat.com>
